unpackaged/main/default/objects/Product2/fields/Can_be_sold_stand_alone__c.field-meta.xml
<CustomField>
    <fullName>Can_be_sold_stand_alone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether product can be sold as stand alone or as part of a bundle</description>
    <inlineHelpText>Denotes whether product can be sold as stand alone or as a part of a bundle</inlineHelpText>
    <label>Can be sold stand alone</label>
    <type>Checkbox</type>
</CustomField>