unpackaged/main/default/objects/Product2/fields/CustItem_Auto_Activate__c.field-meta.xml
<CustomField>
    <fullName>CustItem_Auto_Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether product should be automatically activated/fulfilled</description>
    <inlineHelpText>Denotes whether product should be automatically activated/fulfilled</inlineHelpText>
    <label>CustItem Auto Activate</label>
    <type>Checkbox</type>
</CustomField>