unpackaged/main/default/objects/Product2/fields/CustItem_Auto_Utilize__c.field-meta.xml
<CustomField>
    <fullName>CustItem_Auto_Utilize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustItem Auto Utilize</label>
    <type>Checkbox</type>
</CustomField>