unpackaged/main/default/objects/Product2/fields/CustItem_Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>CustItem_Duration_Unit__c</fullName>
    <description>Denotes the unit in which the duration of product is expressed</description>
    <inlineHelpText>Denotes the unit in which the duration of product is expressed</inlineHelpText>
    <label>CustItem Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>