unpackaged/main/default/objects/Product2/fields/CustItem_Duration_Value__c.field-meta.xml
<CustomField>
    <fullName>CustItem_Duration_Value__c</fullName>
    <description>Denotes the value of product duration</description>
    <inlineHelpText>Denotes the value of product duration</inlineHelpText>
    <label>CustItem Duration Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>