unpackaged/main/default/objects/Product2/fields/CustItem_Standard_Product__c.field-meta.xml
<CustomField>
    <fullName>CustItem_Standard_Product__c</fullName>
    <label>CustItem Standard Product</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>