unpackaged/main/default/objects/Product2/fields/CustItem_Validity_Unit__c.field-meta.xml
<CustomField>
    <fullName>CustItem_Validity_Unit__c</fullName>
    <description>Denotes the unit of product validity</description>
    <inlineHelpText>Denotes the unit of product validity</inlineHelpText>
    <label>CustItem Validity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>