unpackaged/main/default/objects/Product2/fields/CustItem_Validity_Value__c.field-meta.xml
<CustomField>
    <fullName>CustItem_Validity_Value__c</fullName>
    <description>Denotes the value of product validity</description>
    <inlineHelpText>Denotes the value of product validity</inlineHelpText>
    <label>CustItem Validity Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>