unpackaged/main/default/objects/Product2/fields/Display_Child_Products_on_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Display_Child_Products_on_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes netsuite field &quot;Display Components on Transactions&quot; field.</description>
    <inlineHelpText>Denotes netsuite field &quot;Display Components on Transactions&quot; field.</inlineHelpText>
    <label>Display Child Products on Transactions</label>
    <type>Checkbox</type>
</CustomField>