unpackaged/main/default/objects/Product2/fields/Effective_till__c.field-meta.xml
<CustomField>
    <fullName>Effective_till__c</fullName>
    <description>Represents last date of product availibility. It is currently used for Singapore bundle products.</description>
    <inlineHelpText>Represents last date of product availibility.</inlineHelpText>
    <label>Effective till</label>
    <type>Date</type>
</CustomField>