unpackaged/main/default/objects/Product2/fields/Eligible_for_Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Auto_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on the payment api, If checked, full online payment is done, CEA approved then quote will auto approved from OMC</description>
    <label>Eligible for Auto Approval</label>
    <type>Checkbox</type>
</CustomField>