unpackaged/main/default/objects/Product2/fields/End_Date_Non_Editable__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Non_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents QLI&#39;s end date is non-editable on product selection wizard.</description>
    <inlineHelpText>Represents QLI&#39;s end date is non-editable on product selection wizard</inlineHelpText>
    <label>End Date Non-Editable</label>
    <type>Checkbox</type>
</CustomField>