unpackaged/main/default/objects/Product2/fields/Income_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Income_Account_Name__c</fullName>
    <description>Denotes the income account to which sales revenue of this product is billed to</description>
    <inlineHelpText>Denotes the income account to which sales revenue of this product is billed to</inlineHelpText>
    <label>Income Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>