unpackaged/main/default/objects/Product2/fields/Is_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether product is item group or kit item in netsuite</description>
    <inlineHelpText>Denotes whether product is item group or kit item in netsuite</inlineHelpText>
    <label>Is Bundle?</label>
    <type>Checkbox</type>
</CustomField>