unpackaged/main/default/objects/Product2/fields/Is_KIT_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_KIT_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether it is kit parent in the kit</description>
    <inlineHelpText>Denotes whether it is kit parent in the kit</inlineHelpText>
    <label>Is KIT Parent ?</label>
    <type>Checkbox</type>
</CustomField>