unpackaged/main/default/objects/Product2/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>Denotes the item type from NetSuite</description>
    <inlineHelpText>Denotes the item type from NetSuite</inlineHelpText>
    <label>Item Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>