unpackaged/main/default/objects/Product2/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>