unpackaged/main/default/objects/Product2/fields/Multiple_Sale_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Sale_Not_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents product can not be sold multiple times within a single quote.</description>
    <inlineHelpText>Represents product can not be sold multiple times within a single quote</inlineHelpText>
    <label>Multiple Sale Not Allowed</label>
    <type>Checkbox</type>
</CustomField>