unpackaged/main/default/objects/Product2/fields/NetSuite_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Item_Type__c</fullName>
    <label>NetSuite Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventory Lot Numbered</fullName>
            </value>
            <value>
                <fullName>Inventory Serialized</fullName>
            </value>
            <value>
                <fullName>Non Inventory Purchase</fullName>
            </value>
            <value>
                <fullName>Non Inventory ReSale</fullName>
            </value>
            <value>
                <fullName>Non Inventory Sale</fullName>
            </value>
            <value>
                <fullName>Service Purchase</fullName>
            </value>
            <value>
                <fullName>Service ReSale</fullName>
            </value>
            <value>
                <fullName>Service Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>