unpackaged/main/default/objects/Product2/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <label>Product Catalog</label>
    <length>100</length>
    <type>Text</type>
</CustomField>