unpackaged/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Denotes the category of B2C products</description>
    <inlineHelpText>Denotes the category of B2C products</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Repost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>