unpackaged/main/default/objects/Product2/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the reference product class in netsuite</description>
    <inlineHelpText>Denotes the reference product class in netsuite</inlineHelpText>
    <label>Product Class</label>
    <referenceTo>Product_Class__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>