unpackaged/main/default/objects/Product2/fields/Product_Function__c.field-meta.xml
<CustomField>
    <fullName>Product_Function__c</fullName>
    <label>Product Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>