unpackaged/main/default/objects/Product2/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>This will be Product Name in NetSuite.</description>
    <label>Product Name (NS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>