unpackaged/main/default/objects/Product2/fields/Revised_Product__c.field-meta.xml
<CustomField>
    <fullName>Revised_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores new product available with revised details.</description>
    <label>Revised Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Revised_Products</relationshipName>
    <type>Lookup</type>
</CustomField>