unpackaged/main/default/objects/Product2/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Denotes the business segment</description>
    <inlineHelpText>Denotes the business segment</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Only</fullName>
            </value>
            <value>
                <fullName>B2C Only</fullName>
            </value>
            <value>
                <fullName>B2B &amp; B2C</fullName>
            </value>
            <value>
                <fullName>[object Object]</fullName>
                <isActive>false</isActive>
                <label>[object Object]</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>