unpackaged/main/default/objects/Product2/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <description>Denotes the unique code of product</description>
    <inlineHelpText>Denotes the unique code of product</inlineHelpText>
    <label>SKU Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>