unpackaged/main/default/objects/Product2/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the PG subsidiary to which the product belongs to</description>
    <inlineHelpText>Denotes the PG subsidiary to which the product belongs to</inlineHelpText>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>