unpackaged/main/default/objects/Product2/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes reference to the tax code</description>
    <inlineHelpText>Denotes reference to the tax code</inlineHelpText>
    <label>Tax Code</label>
    <referenceTo>Tax_Code__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>