unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Item_Type__c</columns>
    <columns>netsuite_conn__NetSuite_Id__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Is_Bundle__c</columns>
    <columns>Is_KIT_Parent__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>SKU_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>