unpackaged/main/default/objects/Product2/listViews/B2B_Segment_products.listView-meta.xml
<ListView>
    <fullName>B2B_Segment_products</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>netsuite_conn__NetSuite_Id__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>netsuite_conn__NetSuite_Item_Type__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Class__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Item_Type__c</columns>
    <columns>netsuite_conn__Item_Category__c</columns>
    <columns>Is_Bundle__c</columns>
    <columns>Is_KIT_Parent__c</columns>
    <columns>Can_be_sold_stand_alone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>B2B Only</value>
    </filters>
    <filters>
        <field>Subsidiary__c</field>
        <operation>contains</operation>
        <value>Malaysia</value>
    </filters>
    <label>B2B Segment products</label>
</ListView>