unpackaged/main/default/objects/Product2/listViews/FinTech_products.listView-meta.xml
<ListView>
    <fullName>FinTech_products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>netsuite_conn__NetSuite_Id__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Category__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Class__c</columns>
    <columns>Product_Catalog__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>FinTech</value>
    </filters>
    <label>FinTech products</label>
</ListView>