unpackaged/main/default/objects/Product2/listViews/Item_Group.listView-meta.xml
<ListView>
    <fullName>Item_Group</fullName>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Item_Type__c</columns>
    <columns>netsuite_conn__NetSuite_Id__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Is_Bundle__c</columns>
    <columns>Is_KIT_Parent__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>SKU_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>Item Group</value>
    </filters>
    <label>Item Group</label>
</ListView>