unpackaged/main/default/objects/Product2/listViews/Non_inventory_products_SG.listView-meta.xml
<ListView>
    <fullName>Non_inventory_products_SG</fullName>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Item_Type__c</columns>
    <columns>netsuite_conn__NetSuite_Id__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Is_Bundle__c</columns>
    <columns>Is_KIT_Parent__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>SKU_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>Non-Inventory Item</value>
    </filters>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>PropertyGuru Pte Ltd</value>
    </filters>
    <label>Non inventory products SG</label>
</ListView>