unpackaged/main/default/objects/Product2/listViews/PG_Products.listView-meta.xml
<ListView>
    <fullName>PG_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>netsuite_conn__NetSuite_Id__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Category__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Bundle__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PG Products</label>
</ListView>